--- a/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
@@ -7,114 +7,120 @@
 @inject SignInManager<Usuario> SignInManager
 @inject IHttpContextAccessor HttpContextAccessor
 
+<style>
+    .tooltip4 {
+        text-decoration: none;
+        position: relative;
+    }
+
+        .tooltip4 .tooltip-relleno {
+            display: none;
+        }
+
+        .tooltip4:hover .tooltip-relleno {
+            display: block;
+            position: fixed;
+            overflow: hidden;
+            z-index: 1;
+        }
+
+    .tooltip-relleno {
+        background-color: var(--fondoBotonPequeño);
+        color: var(--colorTexto);
+        border: 1px solid var(--fondoBoton);
+        border-radius: 2px;
+        z-index: 1;
+    }
+</style>
+
+<script>
+    window.onmousemove = function (e) {
+        var x = e.clientX,
+            y = e.clientY;
+
+        var tooltipSpan = document.getElementById('tooltip-gratis');
+
+        if (screen.width / 2 > x) {
+            tooltipSpan.style.top = (y + 10) + 'px';
+            tooltipSpan.style.left = (x + 20) + 'px';
+        }
+        else {
+            tooltipSpan.style.top = (y - 10) + 'px';
+            tooltipSpan.style.left = (x - 20 - tooltipSpan.getBoundingClientRect().width) + 'px';
+        };
+    };
+</script>
+
 @if (gratisActuales.Count > 0)
 {
 	<div style="font-size: 23px;">
 		@Herramientas.Idiomas.CogerCadena(idioma, "Free.String1")
 	</div>
 
-	@foreach (var gratisActual in gratisActuales)
-	{
-		<hr>
+    <div class="tooltip4">
+        <div id="tooltip-gratis" class="tooltip-relleno">
+            @if (string.IsNullOrEmpty(tooltipVideo) == false)
+            {
+                <video src="@tooltipVideo" autoplay="autoplay" loop muted style="width: 460px; height: 215px; object-fit: cover;" />
+            }
 
-		<div style="display: flex; align-items: start;">
-			<div class="perfil" style="width: 20%;">
-				<img src="@gratisActual.Tipo.ImagenLogo" />
-			</div>
+            <div style="padding: 15px; text-align: center;">
+                <label>@tooltipNombre</label>
 
-			<div class="perfil" style="width: 80%; padding: 30px 40px;">
-				@foreach (var juego in gratisActual.Juegos)
-				{
-					<a href="@Herramientas.EnlaceAcortador.Generar(juego.Enlace, juego.Tipo)" class="boton-pequeño" style="padding: 0px; margin-top: 10px; margin-bottom: 10px;" target="_blank">
-                        <div class="tooltip2" style="display: flex; align-items: center; position: relative;">
-							<div style="width: 25%;">
-								<img src="@juego.Imagen" style="max-width: 100%; max-height: 100%;" />
-							</div>
+                @if (string.IsNullOrEmpty(tooltipReviewsIcono) == false && string.IsNullOrEmpty(tooltipReviewsCantidad) == false)
+                {
+                    <div style="display: flex; align-items: center; margin-top: 5px; margin-bottom: 5px; padding: 5px; text-align: center; justify-content: center;">
+                        <img src="@tooltipReviewsIcono" style="width: 20px; height: 20px; margin-right: 15px;" />
+                        <label style="font-size: 14px;">@tooltipReviewsCantidad</label>
+                    </div>
+                }
 
-							<div style="width: 75%; margin-left: 20px;">
-								<div>@juego.Nombre</div>
+                @if (string.IsNullOrEmpty(tooltipUsuarioTieneJuego) == false)
+                {
+                    <div>
+                        <label style="font-size: 14px;">@tooltipUsuarioTieneJuego</label>
+                    </div>
+                }
+            </div>
+        </div>
 
-								<div style="display: flex; align-items: start; margin-top: 10px;">
-									@if (gratisActual.Tipo.DRMEnseñar == true)
-									{
-										<div style="height: 20px; margin-right: 15px;">
-											<img src="@Juegos.JuegoDRM2.SacarImagen(juego.DRM)" style="width: 20px; height: 20px;" />
-										</div>
-									}
+        @foreach (var gratisActual in gratisActuales)
+        {
+            <hr>
 
-                                    @if (juego.Juego.Analisis != null)
-                                    {
-                                        @if (string.IsNullOrEmpty(juego.Juego.Analisis.Porcentaje) == false)
+            <div style="display: flex; align-items: start;">
+                <div class="perfil" style="width: 20%;">
+                    <img src="@gratisActual.Tipo.ImagenLogo" />
+                </div>
+
+                <div class="perfil" style="width: 80%; padding: 30px 40px;">
+                    @foreach (var juego in gratisActual.Juegos)
+                    {
+                        <div @onmouseover="@(e => CargarTooltip(e, juego, gratisActual.Tipo.Tipo))">
+                            <a href="@Herramientas.EnlaceAcortador.Generar(juego.Enlace, juego.Tipo)" class="boton-pequeño" style="padding: 0px; margin-top: 10px; margin-bottom: 10px;" target="_blank">
+                                <div style="display: flex; align-items: center; position: relative;">
+                                    <div style="width: 33%;">
+                                        <img src="@juego.Imagen" style="max-width: 100%; max-height: 100%;" />
+                                    </div>
+
+                                    <div style="width: 66%; margin-left: 25px;">
+                                        <div style="font-size: 18px;">@juego.Nombre</div>
+
+                                        @if (gratisActual.Tipo.DRMEnseñar == true)
                                         {
-                                            <div style="display: flex; align-items: center; margin-right: 15px;">
-                                                @if (int.Parse(juego.Juego.Analisis.Porcentaje) > 74)
-                                                {
-                                                    <img src="/imagenes/analisis/positive2.webp" style="width: 25px; height: 25px;" />
-                                                }
-
-                                                @if (int.Parse(juego.Juego.Analisis.Porcentaje) > 49 && int.Parse(juego.Juego.Analisis.Porcentaje) < 75)
-                                                {
-                                                    <img src="/imagenes/analisis/mixed2.webp" style="width: 25px; height: 25px;" />
-                                                }
-
-                                                @if (int.Parse(juego.Juego.Analisis.Porcentaje) < 50)
-                                                {
-                                                    <img src="/imagenes/analisis/negative2.webp" style="width: 25px; height: 25px;" />
-                                                }
+                                            <div style="height: 20px; margin-right: 15px; margin-top: 15px;">
+                                                <img src="@Juegos.JuegoDRM2.SacarImagen(juego.DRM)" style="width: 20px; height: 20px;" />
                                             </div>
-                                        }                                      
-                                    }
-
-									@if (usuario != null)
-									{
-                                        @if (ComprobarUsuarioJuego(juego.Juego, gratisActual.Tipo.Tipo) != null)
-                                        {
-                                            @if (ComprobarUsuarioJuego(juego.Juego, gratisActual.Tipo.Tipo) == "3" || ComprobarUsuarioJuego(juego.Juego, gratisActual.Tipo.Tipo) == "5")
-                                            {
-                                                <div style="padding: 8px 11px; font-size: 14px; background-color: var(--fondoBien); color: var(--colorTextoBien); position: absolute; bottom: 0px; right: 0px;">
-                                                    <i class="fa-solid fa-check" style="font-size: 20px;"></i>
-                                                </div>
-                                            }
-                                            else
-                                            {
-                                                <div style="padding: 8px 11px; font-size: 14px; background-color: var(--fondoAlerta); color: var(--colorTextoAlerta); position: absolute; bottom: 0px; right: 0px;">
-                                                    <i class="fa-solid fa-xmark" style="font-size: 20px;"></i>
-                                                </div>
-                                            }
                                         }
-									}
-								</div>
-							</div>
-
-                            @if (juego.Juego.Tipo == Juegos.JuegoTipo.Game)
-                            {
-                                <div class="tooltip-abrir tooltip-abajo2" style="top: 50%; left: 50%; white-space: pre;">
-                                    @if (usuario != null)
-								    {
-                                        @if (ComprobarUsuarioJuego(juego.Juego, gratisActual.Tipo.Tipo) != null)
-                                        {
-                                            @if (ComprobarUsuarioJuego(juego.Juego, gratisActual.Tipo.Tipo) == "3" || ComprobarUsuarioJuego(juego.Juego, gratisActual.Tipo.Tipo) == "5")
-                                            {
-                                                <div style="padding: 20px; font-size: 14px; background-color: var(--fondoBien); color: var(--colorTextoBien);">
-                                                    <span>@Herramientas.Idiomas.CogerCadena(idioma, "Free.String" + ComprobarUsuarioJuego(juego.Juego, gratisActual.Tipo.Tipo))</span>
-                                                </div>
-                                            }
-                                            else
-                                            {
-                                                <div style="padding: 20px; font-size: 14px; background-color: var(--fondoAlerta); color: var(--colorTextoAlerta);">
-                                                    <span>@Herramientas.Idiomas.CogerCadena(idioma, "Free.String" + ComprobarUsuarioJuego(juego.Juego, gratisActual.Tipo.Tipo))</span>
-                                                </div>
-                                            }
-                                        }
-								    }
+                                    </div>
                                 </div>
-                            }                           
+                            </a>
                         </div>
-					</a>
-				}
-			</div>
-		</div>
-	}
+                    }
+                </div>
+            </div>
+        }
+    </div>
 }
 
 <div style="font-size: 23px; margin-top: 60px;">
@@ -407,5 +413,69 @@
         }
 
         return null;
+    }
+
+    private string tooltipNombre = string.Empty;
+    private string tooltipVideo = string.Empty;
+    private string tooltipReviewsIcono = string.Empty;
+    private string tooltipReviewsCantidad = string.Empty;
+    private string tooltipUsuarioTieneJuego = string.Empty;
+
+    private void CargarTooltip(MouseEventArgs args, Juegos.JuegoGratis juegoGratis, Gratis2.GratisTipo tipo)
+    {
+        Juegos.Juego juego = juegoGratis.Juego;
+
+        tooltipNombre = juego.Nombre;
+        tooltipVideo = null;
+        tooltipReviewsIcono = null;
+        tooltipReviewsCantidad = null;
+        tooltipUsuarioTieneJuego = null;
+
+        if (juego.Media != null)
+        {
+            if (string.IsNullOrEmpty(juego.Media.Video) == false)
+            {
+                int int1 = juego.Media.Video.LastIndexOf("/");
+                string temp1 = juego.Media.Video.Remove(int1, juego.Media.Video.Length - int1);
+
+                tooltipVideo = temp1 + "/microtrailer.webm";
+
+                tooltipVideo = tooltipVideo.Replace("cdn.akamai.steamstatic.com/", "cdn.cloudflare.steamstatic.com/");
+                tooltipVideo = tooltipVideo.Replace("http://", "https://");
+            }
+        }
+
+        if (juego.Analisis != null)
+        {
+            if (int.Parse(juego.Analisis.Porcentaje) > 74)
+            {
+                tooltipReviewsIcono = "/imagenes/analisis/positive.webp";
+            }
+            else if (int.Parse(juego.Analisis.Porcentaje) > 49 && int.Parse(juego.Analisis.Porcentaje) < 75)
+            {
+                tooltipReviewsIcono = "/imagenes/analisis/mixed.webp";
+            }
+            else if (int.Parse(juego.Analisis.Porcentaje) < 50)
+            {
+                tooltipReviewsIcono = "/imagenes/analisis/negative.webp";
+            }
+
+            tooltipReviewsCantidad = juego.Analisis.Porcentaje.ToString() + "% • " + Herramientas.Calculadora.RedondearAnalisis(idioma, juego.Analisis.Cantidad);
+        }
+
+        if (usuario != null)
+        {
+            if (ComprobarUsuarioJuego(juego, tipo) != null)
+            {
+                if (ComprobarUsuarioJuego(juego, tipo) == "3" || ComprobarUsuarioJuego(juego, tipo) == "5")
+                {
+                    tooltipUsuarioTieneJuego = Herramientas.Idiomas.CogerCadena(idioma, "Free.String" + ComprobarUsuarioJuego(juego, tipo));
+                }
+                else
+                {
+                    tooltipUsuarioTieneJuego = Herramientas.Idiomas.CogerCadena(idioma, "Free.String" + ComprobarUsuarioJuego(juego, tipo));
+                }
+            }
+        }
     }
 }
