--- a/pepeizqs deals web/Pages/Componentes/Secciones/Sorteos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Sorteos.razor
@@ -10,34 +10,139 @@
 
 <div style="background-color: var(--fondoCuerpo); position: sticky; position: -webkit-sticky; top: 70px; z-index: 1; margin: -10px; padding: 10px;">
     <div style="display: flex; align-items: center; width: 100%;">
-        <div style="width: 70%; font-size: 23px; text-align: left;">
-            @Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String2")
+        <div style="display: flex; align-items: center; width: 70%; text-align: left;">
+            <label style="font-size: 23px;">@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.Title")</label>
+
+            <a onclick="moverScroll('premium')" style="color: var(--colorTextoOscuro); text-decoration: underline; font-size: 15px; margin-left: 15px; cursor: pointer;">@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String1") (@sorteosGrupoPremium.Count.ToString())</a>
+
+            <a onclick="moverScroll('basic')" style="color: var(--colorTextoOscuro); text-decoration: underline; font-size: 15px; margin-left: 15px; cursor: pointer;">@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String2") (@sorteosGrupoNormal.Count.ToString())</a>
         </div>
 
         <div style="display: flex; align-items: center; width: 30%; justify-content: right;">
-            
-
+            <a onclick="moverScroll('normas2')" style="color: var(--colorTextoOscuro); text-decoration: underline; font-size: 15px; margin-left: 15px; cursor: pointer;">@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String16")</a>
         </div>
     </div>
 </div>
 
+<div style="font-size: 23px; display: flex; align-items: center; margin-top: 40px;">
+    <label>@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String1")</label>
 
+    @if (usuario != null)
+    {
+        bool apto = false;
 
+        if (usuario != null)
+        {
+            if (string.IsNullOrEmpty(usuario.OfficialGroup) == false)
+            {
+                if (usuario.OfficialGroup.ToLower() == "true")
+                {
+                    apto = true;
+                }
+            }
+
+            if (string.IsNullOrEmpty(usuario.SteamGames) == false)
+            {
+                List<string> juegosUsuario = Herramientas.Listados.Generar(usuario.SteamGames);
+
+                if (juegosUsuario.Count < 50)
+                {
+                    apto = false;
+                }
+            }
+        }
+
+        if (apto == true)
+        {
+            <a onclick="moverScroll('normas2')" style="color: var(--colorTextoOscuro); text-decoration: underline; font-size: 15px; margin-left: 15px; cursor: pointer;">@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String5")</a>
+        }
+        else
+        {
+            <a onclick="moverScroll('normas2')" style="color: var(--colorTextoOscuro); text-decoration: underline; font-size: 15px; margin-left: 15px; cursor: pointer;">@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String6")</a>
+        }
+    }
+</div>
+
+<hr />
 
 @if (sorteosGrupoPremium != null)
 {
-    
+    if (sorteosGrupoPremium.Count > 0)
+    {
+        <div id="premium" class="perfil" style="padding-top: 25px; padding-bottom: 30px;">
+            <div style="padding-bottom: 10px;">
+                @if (sorteosGrupoPremium.Count == 1)
+                {
+                    @string.Format("{0} {1}{2}", Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String15"), Herramientas.Calculadora.DiferenciaTiempo(Convert.ToDateTime(sorteosGrupoPremium[0].Sorteo.FechaTermina), idioma, 1), ":")
+                }
+                else
+                {
+                    @string.Format("{0} {1}{2}", Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String14"), Herramientas.Calculadora.DiferenciaTiempo(Convert.ToDateTime(sorteosGrupoPremium[0].Sorteo.FechaTermina), idioma, 2), ":")
+                }
+            </div>
+
+            @foreach (var sorteo in sorteosGrupoPremium)
+            {
+                if (sorteo.Sorteo.FechaTermina >= DateTime.Now)
+                {
+                    if (sorteo.PuedeParticipar == true)
+                    {
+                        <button class="boton-pequeño" style="padding: 0px; margin-top: 15px; margin-bottom: 15px;" @onclick="@(e => Entrar(e, sorteo))">
+                            <div class="perfil-flexible-centrado">
+                                <div style="width: 20%;">
+                                    <img src="@sorteo.Juego.Imagenes.Capsule_231x87" style="max-height: 100%; max-width: 100%;" />
+                                </div>
+
+                                <div style="width: 80%; padding-left: 10px; padding-right: 10px;">
+                                    <div style="margin-bottom: 10px;">@sorteo.Juego.Nombre</div>
+
+                                    <div>@CalcularParticipantes(sorteo.Sorteo)</div>
+                                </div>
+                            </div>
+                        </button>
+                    }
+                    else
+                    {
+                        <button class="boton-pequeño" style="padding: 0px; cursor: not-allowed; pointer-events: none; margin-top: 15px; margin-bottom: 15px;">
+                            <div class="perfil-flexible-centrado">
+                                <div style="width: 20%;">
+                                    <img src="@sorteo.Juego.Imagenes.Capsule_231x87" style="max-height: 100%; max-width: 100%;" />
+                                </div>
+
+                                <div style="width: 60%; padding-left: 10px; padding-right: 10px;">
+                                    <div style="margin-bottom: 10px;">@sorteo.Juego.Nombre</div>
+
+                                    <div>@CalcularParticipantes(sorteo.Sorteo)</div>
+                                </div>
+
+                                @if (sorteo.TieneJuego == true)
+                                {
+                                    <div style="width: 20%; padding-right: 40px; text-align: right;">@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String7")</div>
+                                }
+                            </div>
+                        </button>
+                    }
+                }
+            }
+        </div>
+    }
+    else
+    {
+        <div>
+            @Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String8")
+        </div>
+    }
 }
 
-@if (sorteosGrupoNormal != null)
-{
-    <div style="font-size: 23px; display: flex; align-items: center;">
-        <label>@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String2")</label>
+<div style="font-size: 23px; display: flex; align-items: center; margin-top: 40px;">
+    <label>@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String2")</label>
 
-        @if (usuario != null)
+    @if (usuario != null)
+    {
+        bool apto = false;
+
+        if (usuario != null)
         {
-            bool apto = false;
-
             if (string.IsNullOrEmpty(usuario.OfficialGroup2) == false)
             {
                 if (usuario.OfficialGroup2.ToLower() == "true")
@@ -55,23 +160,26 @@
                     apto = false;
                 }
             }
-
-            if (apto == true)
-            {
-                <a onclick="moverScroll('normas2')" style="color: var(--colorTextoOscuro); text-decoration: underline; font-size: 15px; margin-left: 15px; cursor: pointer;">@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String5")</a>
-            }
-            else
-            {
-                <a onclick="moverScroll('normas2')" style="color: var(--colorTextoOscuro); text-decoration: underline; font-size: 15px; margin-left: 15px; cursor: pointer;">@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String6")</a>
-            }
         }
-    </div>
 
-    <hr />
+        if (apto == true)
+        {
+            <a onclick="moverScroll('normas2')" style="color: var(--colorTextoOscuro); text-decoration: underline; font-size: 15px; margin-left: 15px; cursor: pointer;">@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String5")</a>
+        }
+        else
+        {
+            <a onclick="moverScroll('normas2')" style="color: var(--colorTextoOscuro); text-decoration: underline; font-size: 15px; margin-left: 15px; cursor: pointer;">@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String6")</a>
+        }
+    }
+</div>
 
+<hr />
+
+@if (sorteosGrupoNormal != null)
+{
     if (sorteosGrupoNormal.Count > 0)
     {      
-        <div class="perfil" style="padding-top: 25px; padding-bottom: 30px;">
+        <div id="basic" class="perfil" style="padding-top: 25px; padding-bottom: 30px;">
             <div style="padding-bottom: 10px;">
                 @if (sorteosGrupoNormal.Count == 1)
                 {
@@ -80,8 +188,7 @@
                 else
                 {
                     @string.Format("{0} {1}{2}", Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String14"), Herramientas.Calculadora.DiferenciaTiempo(Convert.ToDateTime(sorteosGrupoNormal[0].Sorteo.FechaTermina), idioma, 2), ":")
-                }
-                
+                }               
             </div>
 
             @foreach (var sorteo in sorteosGrupoNormal)
@@ -135,26 +242,41 @@
             @Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String8")
         </div>
     }
-
-    <div style="font-size: 23px; display: flex; align-items: center; margin-top: 50px;">
-        <label>@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String9")</label>
-    </div>
-
-    <hr />
-
-    <div id="normas2" class="perfil" style="padding: 20px;">
-        <ul>
-            <li><a href="https://pepeizqdeals.com/Identity/Account/Register" target="_blank" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String13")</a></li>
-            <li>@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String10")</li>
-            <li><a href="https://steamcommunity.com/groups/pepeizqdeals/" target="_blank" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String11")</a></li>
-            <li>@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String12")</li>
-        </ul>
-    </div>
 }
+
+<div style="font-size: 23px; display: flex; align-items: center; margin-top: 50px;">
+    <label>@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String9")</label>
+</div>
+
+<hr />
+
+<div id="normas2" class="perfil" style="padding: 30px;">
+    <a href="https://steamcommunity.com/groups/pepeizqdeals2/" target="_blank" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String1")</a><br />
+    <label style="margin-top: 10px;">@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String17")</label>
+    <ul>
+        <li><a href="/imagenes/otros/donacionhumble.png" target="_blank" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String18")</a> @Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String20")</li>
+        <li>@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String19") @Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String21")</li>
+    </ul>
+    <label>@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String22")</label>
+    <ul>
+        <li><a href="https://pepeizqdeals.com/Identity/Account/Register" target="_blank" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String13")</a></li>
+        <li>@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String10")</li>
+        <li>@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String12")</li>
+    </ul>
+</div>
+<div class="perfil" style="padding: 30px; margin-top: 20px;">
+    <a href="https://steamcommunity.com/groups/pepeizqdeals/" target="_blank" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String2")</a>
+    <label style="margin-top: 10px;">@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String11")</label>
+    <ul>
+        <li><a href="https://pepeizqdeals.com/Identity/Account/Register" target="_blank" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String13")</a></li>
+        <li>@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String10")</li>
+        <li>@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String12")</li>
+    </ul>
+</div>
 
 <script>
     function moverScroll(id) {
-        const yOffset = -175;
+        const yOffset = -155;
         const element = document.getElementById(id);
         const y = element.getBoundingClientRect().top + window.pageYOffset + yOffset;
 
