--- a/pepeizqs deals web/Pages/Componentes/Secciones/Sorteos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Sorteos.razor
@@ -250,27 +250,44 @@
 
 <hr />
 
-<div id="normas2" class="perfil" style="padding: 30px;">
-    <a href="https://steamcommunity.com/groups/pepeizqdeals2/" target="_blank" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String1")</a><br />
+<div id="normas2" class="perfil">
+    <label>@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String23")</label>
+</div>
+
+<div style="font-size: 23px; display: flex; align-items: center; margin-top: 50px;">
+    <label>@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String24")</label>
+</div>
+
+<hr />
+
+<div class="perfil">
+    <label>@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String22")</label>
+    <ul>
+        <li><a href="https://pepeizqdeals.com/Identity/Account/Register" target="_blank" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String13")</a></li>
+        <li><a href="https://pepeizqdeals.com/Identity/Account/Manage/SteamAccount" target="_blank" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String10")</a></li>
+        <li>@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String12")</li>
+        <li><a href="https://steamcommunity.com/groups/pepeizqdeals2/" target="_blank" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String26")</a></li>
+    </ul>
     <label style="margin-top: 10px;">@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String17")</label>
     <ul>
         <li><a href="/imagenes/otros/donacionhumble.png" target="_blank" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String18")</a> @Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String20")</li>
         <li>@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String19") @Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String21")</li>
     </ul>
-    <label>@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String22")</label>
-    <ul>
-        <li><a href="https://pepeizqdeals.com/Identity/Account/Register" target="_blank" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String13")</a></li>
-        <li>@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String10")</li>
-        <li>@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String12")</li>
-    </ul>
 </div>
-<div class="perfil" style="padding: 30px; margin-top: 20px;">
-    <a href="https://steamcommunity.com/groups/pepeizqdeals/" target="_blank" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String2")</a>
-    <label style="margin-top: 10px;">@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String11")</label>
+
+<div style="font-size: 23px; display: flex; align-items: center; margin-top: 50px;">
+    <label>@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String25")</label>
+</div>
+
+<hr />
+
+<div class="perfil">
+    <label>@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String11")</label>
     <ul>
         <li><a href="https://pepeizqdeals.com/Identity/Account/Register" target="_blank" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String13")</a></li>
-        <li>@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String10")</li>
+        <li><a href="https://pepeizqdeals.com/Identity/Account/Manage/SteamAccount" target="_blank" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String10")</a></li>
         <li>@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String12")</li>
+        <li><a href="https://steamcommunity.com/groups/pepeizqdeals2/" target="_blank" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String27")</a></li>
     </ul>
 </div>
 
